--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@types/react-dnd": "^3.0.2",
     "@uiw/react-json-view": "2.0.0-alpha.32",
     "@yusifaliyevpro/countries": "^2.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dnd-core": "^16.0.1",
     "embla-carousel-react": "^8.6.0",
     "immutability-helper": "^3.1.1",
     "input-otp": "^1.4.2",
